@@ -185,6 +185,7 @@ R *** Issued snapshot 4
 * Now enables thread caching win32 allocator variant when available
 * Merged FOX v1.4.29
 + Added fastbuffer option to QBuffer
++ Added QThread::processorAffinity() and setProcessorAffinity()
 
 
 v0.85 13th Feb 2005:
